# src/main/resources/api/openapi.yaml
@@ -62,14 +62,10 @@ paths:
           content:
             application/xml:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Cart"
+                $ref: "#/components/schemas/Cart"
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Cart"
+                $ref: "#/components/schemas/Cart"
         404:
           description: Given customer ID doesn't exist
           content: {}
@@ -227,14 +223,10 @@ paths:
           content:
             application/xml:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Item"
+                $ref: "#/components/schemas/Item"
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Item"
+                $ref: "#/components/schemas/Item"
         404:
           description: Given item (product) ID doesn't exist
           content: {}
@@ -282,14 +274,10 @@ paths:
           content:
             application/xml:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Order"
+                $ref: "#/components/schemas/Order"
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Order"
+                $ref: "#/components/schemas/Order"
         406:
           description: If payment is not authorized.
           content: {}
@@ -456,10 +444,14 @@ paths:
           content:
             application/xml:
               schema:
-                $ref: "#/components/schemas/Address"
+                type: array
+                items:
+                  $ref: "#/components/schemas/Address"
             application/json:
               schema:
-                $ref: "#/components/schemas/Address"
+                type: array
+                items:
+                  $ref: "#/components/schemas/Address"
   /api/v1/addresses:
     get:
       tags:
@@ -676,14 +668,10 @@ paths:
           content:
             application/xml:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Authorization"
+                $ref: "#/components/schemas/Authorization"
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Authorization"
+                $ref: "#/components/schemas/Authorization"
   /api/v1/shipping:
     post:
       tags:
@@ -816,6 +804,9 @@ components:
       description: Shopping Cart of the user
       type: object
       properties:
+        id:
+          description: Cart identifier
+          type: string
         customerId:
           description: Id of the customer who possesses the cart
           type: string
@@ -894,6 +885,9 @@ components:
     Address:
       type: object
       properties:
+        id:
+          description: Address identifier
+          type: string
         number:
           description: house of flat number
           type: string
@@ -920,14 +914,20 @@ components:
     Card:
       type: object
       properties:
+        id:
+          description: Card identifier
+          type: string
+        userId:
+          description: Identifier of the card's owner
+          type: string
         cardNumber:
           description: Card Number
           type: string
         expires:
           description: Expiration date
           type: string
-        ccv:
-          description: CCV code
+        cvv:
+          description: CVV code
           type: string
       xml:
         name: Card
@@ -935,15 +935,14 @@ components:
       description: Request object for new card registration.
       allOf:
         - $ref: "#/components/schemas/Card"
-        - type: object
-          properties:
-            userId:
-              type: object
       xml:
         name: AddCardReq
     Payment:
       type: object
       properties:
+        id:
+          description: Payment identifier
+          type: string
         authorized:
           description: Flag that specified whether payment is authorized or not
           type: boolean
@@ -955,6 +954,9 @@ components:
     Shipment:
       type: object
       properties:
+        id:
+          description: Shipment identifier
+          type: string
         orderId:
           description: Order Identifier
           type: string
@@ -990,8 +992,7 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
         username:
           type: string
         firstName:
@@ -1014,24 +1015,22 @@ components:
       description: Contains the new order request information
       type: object
       properties:
-        customer:
-          #description: URI that should be used to fetch the customer
-          $ref: "#/components/schemas/URI"
-        address:
-          #description: URI that should be used to fetch the address
-          $ref: "#/components/schemas/URI"
-        card:
-          #description: URI that should be used to fetch the payment card
-          $ref: "#/components/schemas/URI"
+        customerId:
+          description: Identifier of the customer placing the order
+          type: string
+        addressId:
+          description: Identifier of the shipping address to use
+          type: string
+        cardId:
+          description: Identifier of the payment card to use
+          type: string
         items:
-          #description: URI that should be used to fetch the items from shopping cart
-          $ref: "#/components/schemas/URI"
+          description: Identifiers of the items from the shopping cart to order
+          type: array
+          items:
+            type: string
       xml:
         name: NewOrder
-    URI:
-      type: object
-      xml:
-        name: URI
     Authorization:
       type: object
       properties:
@@ -1113,4 +1112,18 @@ components:
           type: array
           uniqueItems: true
           items:
-            type: string
+            $ref: "#/components/schemas/Tag"
+      xml:
+        name: Product
+    Tag:
+      description: A product tag
+      type: object
+      properties:
+        id:
+          description: Tag identifier
+          type: string
+        name:
+          description: Tag name
+          type: string
+      xml:
+        name: Tag
